--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .container {
-  max-width: 1280px;
+  max-width: 1440px;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -12,4 +12,7 @@
 
 html {
   color-scheme: dark;
+}
+body {
+  background: #23233b;
 }
